--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
-permalink: /blog/:title
+permalink: /honest-to-good/:title/
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
