--- a/_data/portfolio.yaml
+++ b/_data/portfolio.yaml
@@ -1,4 +1,4 @@
-- title: "test The hour-by-hour pandemic routine that's calmed my anxiety and kept me focused"
+- title: "The hour-by-hour pandemic routine that's calmed my anxiety and kept me focused"
   copy: "Tackle three major challenges to get to the root of an app. Find more in this guide to getting full visibility into Salesforce and more."
   category: "Business Insider"
   image: 'https://i.insider.com/5f5250457ed0ee001e25d820?width=900&format=jpeg&auto=webp'
