--- a/_data/portfolio.yaml
+++ b/_data/portfolio.yaml
@@ -25,8 +25,15 @@
 - title: "From pueblos to dude ranches, Pecos National Historical Park is a goldmine of Southwestern history"
   copy: "Tackle three major challenges to get to the root of an app. Find more in this guide to getting full visibility into Salesforce and more."
   category: "Roadtrippers Magazine"
-  image: 'https://rt-homepage.roadtrippers.com/wp-content/uploads/2020/04/pecos-national-historical-park-03-1080x1440.jpg'
+  image: 'https://https://roadtrippers.com/wp-content/uploads/2020/04/pecos-national-historical-park-03-675x900.jpg'
   url: "https://roadtrippers.com/magazine/pecos-national-historical-park-new-mexico/"
+
+- title: "Newsweek Readers Choice Judge - Best Small Airport"
+  copy: "Tackle three major challenges to get to the root of an app. Find more in this guide to getting full visibility into Salesforce and more."
+  category: "Newsweek"
+  image: 'https://newsweek.readerschoiceaward.com/contest/contest_production_d065251c-e5cc-4479-8afa-387f953914a3/6a3a9c26-4b2c-48eb-bbe1-25ac54a84c92.png'
+  url: "https://www.newsweek.com/readerschoice/best-small-airport"
+
 
 - title: "The Best Hawaiian Islands, Ranked"
   copy: "Tackle three major challenges to get to the root of an app. Find more in this guide to getting full visibility into Salesforce and more."
