--- a/_data/portfolio.yaml
+++ b/_data/portfolio.yaml
@@ -25,7 +25,7 @@
 - title: "From pueblos to dude ranches, Pecos National Historical Park is a goldmine of Southwestern history"
   copy: "Tackle three major challenges to get to the root of an app. Find more in this guide to getting full visibility into Salesforce and more."
   category: "Roadtrippers Magazine"
-  image: 'https://https://roadtrippers.com/wp-content/uploads/2020/04/pecos-national-historical-park-03-675x900.jpg'
+  image: 'https://roadtrippers.com/wp-content/uploads/2020/04/pecos-national-historical-park-08.jpg'
   url: "https://roadtrippers.com/magazine/pecos-national-historical-park-new-mexico/"
 
 - title: "Newsweek Readers Choice Judge - Best Small Airport"
